# mgear_solvers_rumba

./: README.md
mtorba/: mgear_curveCns.py  mgear_ikfk2Bone.py  mgear_intMatrix.py  mgear_inverseRotOrder.py  mgear_mulMatrix.py  mgear_rollSplineKine.py  mgear_slideCurve2.py  mgear_squashStretch2.py
src/: CMakeLists.txt  curveCns.cpp  ikfk2Bone.cpp  interpolateMatrix.cpp  inverseRotOrder.cpp  matrixConstraint.cpp  mgear_solvers.h  mulMatrix.cpp  register.cpp  rollSplineKine.cpp  slideCurve2.cpp  springNode.cpp  squashStretch2.cpp  utils.cpp
